--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10x, 18.x, 20.x, 22.x]
+        node-version: [10.x, 18.x, 20.x, 22.x]
 
 
     steps:
