--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Bloggy app
 
 on: 
 # Triggers the workflow on push or pull request events
-  push:
+  pull_request:
     branches: ['main']
 
 jobs:
